--- a/test/vite-project/src/App.css
+++ b/test/vite-project/src/App.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -47,4 +47,4 @@ body {
 
 .read-the-docs {
   color: #888;
-}
+} */
